[package]
name = "portal"
version = "0.3.0"
authors = ["https://github.com/wangyuntao/portal"]
description = "Exposes local servers behind NATs and firewalls to the Internet"
edition = "2018"

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
rand = "0.7"
